Fix for Bug #21466: INET_ATON() returns signed int, not unsigned