sql/item_func.h
@@ -1289,7 +1289,7 @@ public:
    Item_func_inet_aton(Item *a) :Item_int_func(a) {}
    longlong val_int();
    const char *func_name() const { return "inet_aton"; }
-   void fix_length_and_dec() { decimals = 0; max_length = 21; maybe_null=1;}
+   void fix_length_and_dec() { decimals = 0; max_length = 21; maybe_null=1;unsigned_flag=1;}
 };
 
 
